# VideoGamePublishers

./: README.md  VideoGamePublishers_20221101.sql  data.csv  data.json  exportCSV.sh  exportJSON.sh
AuthService/: .env  requirements.txt  server.py
WebServer/: CMakeLists.txt  conanfile.txt  setupDev.bat  setupRelease.bat
WebServer/server/VideoGamePublishersServer/: CMakeLists.txt  DbStatics.cpp  DbStatics.h  config.json  configMac.json  main.cpp
WebServer/server/VideoGamePublishersServer/controllers/: Auth.cpp  Auth.h  Data.cpp  Data.h
WebServer/server/VideoGamePublishersServer/files/: data.csv  data.json  openapi.json  schema.json
WebServer/server/VideoGamePublishersServer/static/: docs.html  index.html  table.css  table.html
WebServer/server/VideoGamePublishersServer/test/: CMakeLists.txt  test_main.cc
WebServer/server/VideoGamePublishersServer/views/: home.csp  table.csp
